--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-    <script src="Sketch.js"></script>
+    <link rel="stylesheet" href="./css.css">
     <title>Title</title>
 </head>
 <body>
-
+  <h1>test</h1>
 </body>
+<script src="dist/main.js"></script>
 </html>
