--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css.css">
+    <link rel="stylesheet" href="src/css.css">
     <title>Title</title>
 </head>
 <body>
-  <h1>test</h1>
 </body>
 <script src="dist/main.js"></script>
 </html>
