Change index.html title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="src/css.css">
-    <title>Title</title>
+    <title>Game of Life</title>
 </head>
 <body>
 </body>
